fix: fixed spacing issues

--- a/frontend/src/app/[lang]/(pages)/globals.css
+++ b/frontend/src/app/[lang]/(pages)/globals.css
@@ -6,6 +6,14 @@
   @apply dark:bg-black;
 } */
 
+@page {
+  size: A4;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 15mm;
+  margin-bottom: 15mm;
+}
+
 /******************************************* 
   Rich Text Styles
 *******************************************/
